--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "bootstrap": "^5.3.0-alpha3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dynamic-star": "^0.0.2",
     "react-fast-marquee": "^1.5.2",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0"
+    "react-rater": "^6.0.5",
+    "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^6.10.0",
+    "react-simple-star-rating": "^5.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
