--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "react-dom": "^18.2.0",
     "react-dynamic-star": "^0.0.2",
     "react-fast-marquee": "^1.5.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-rater": "^6.0.5",
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.11.1",
     "react-simple-star-rating": "^5.1.7"
   },
   "devDependencies": {
